qtwebsockets-opensource-src (5.5.0-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Update debian/copyright.
  * Bump Qt build-dependencies to 5.5.0.
  * Run the tests on kfreebsd, just ignore the tests result.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 27 Aug 2015 14:28:20 +0300

qtwebsockets-opensource-src (5.4.2-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 24 Jun 2015 18:07:41 -0300

qtwebsockets-opensource-src (5.4.2-1) experimental; urgency=medium

  * New upstream release.
    - Bump Qt build dependencies.
  * Clear up the list in Uploaders removing people who hasn't committed to the
    repo in more than a year. They can re add themselves whenever they want
    (and we really hope to see you back really soon!).
  * Export HTML documentation.
  * Remove fix_qwebsocket_test.diff, applied upstream.
    - Remove empty debian/patches.
  * Update examples install file.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 03 Jun 2015 18:04:41 -0300

qtwebsockets-opensource-src (5.4.1-1) experimental; urgency=medium

  * New upstream release.
  * Update debian/copyright.
  * Bump Qt build-dependencies to 5.4.1.

 -- Timo Jyrinki <timo@debian.org>  Wed, 04 Mar 2015 14:02:24 +0000

qtwebsockets-opensource-src (5.4.0-2) experimental; urgency=medium

  * Add a patch from Helge Deller to fix failing test on some
    architectures (closes: #764893).
  * Update debian/watch for new server name.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 25 Jan 2015 10:36:57 +0300

qtwebsockets-opensource-src (5.4.0-1) experimental; urgency=medium

  * New upstream release.
  * Update build-dependencies for Qt 5.4.0.
  * Update debian/copyright.
  * Disable fix_kfreebsd_test.patch, as we skip tests on kfreebsd
    anyway.
  * Bump Standards-Version to 3.9.6, no changes needed.
  * Update qtwebsockets5-examples.install.